@@ -2,11 +2,14 @@ package org.folio.services;
 
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
+import static one.util.streamex.StreamEx.ofSubLists;
 import static org.folio.invoices.utils.HelperUtils.buildIdsChunks;
 import static org.folio.invoices.utils.HelperUtils.collectResultsOnSuccess;
 import static org.folio.invoices.utils.HelperUtils.convertIdsToCqlQuery;
 import static org.folio.rest.RestConstants.MAX_IDS_FOR_GET_RQ;
 
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
@@ -36,7 +39,7 @@ public class InvoiceRetrieveService {
           .collect(toList()).stream()
           .flatMap(List::stream)
           .collect(Collectors.toList()))
-      .thenAccept(invoices -> future.complete(invoices.stream().collect(toMap(Invoice::getId, Function.identity()))))
+      .thenAccept(invoices -> future.complete(invoices.stream().distinct().collect(toMap(Invoice::getId, Function.identity()))))
       .exceptionally(t -> {
         future.completeExceptionally(t);
         return null;
@@ -45,19 +48,15 @@ public class InvoiceRetrieveService {
   }
 
   public CompletableFuture<List<InvoiceCollection>> getInvoicesByChunks(List<Voucher> vouchers, RequestContext requestContext) {
-    List<CompletableFuture<InvoiceCollection>> invoiceFutureList = buildIdsChunks(vouchers, MAX_IDS_FOR_GET_RQ).values()
-      .stream()
-      .map(this::buildInvoiceListQuery)
-      .map(query -> invoiceService.getInvoices(query, 0, MAX_IDS_FOR_GET_RQ, requestContext))
-      .collect(Collectors.toList());
-
-    return collectResultsOnSuccess(invoiceFutureList);
+    List<String> invoiceIds = vouchers.stream().map(Voucher::getInvoiceId).collect(Collectors.toList());
+    return collectResultsOnSuccess(
+      ofSubLists(new ArrayList<>(invoiceIds), MAX_IDS_FOR_GET_RQ)
+            .map(ids -> getInvoicesChunkByInvoiceIds(ids, requestContext))
+            .toList());
   }
 
-  private String buildInvoiceListQuery(List<Voucher> vouchers) {
-    List<String> invoiceIds = vouchers.stream()
-      .map(Voucher::getInvoiceId)
-      .collect(Collectors.toList());
-    return convertIdsToCqlQuery(invoiceIds);
+  private CompletableFuture<InvoiceCollection> getInvoicesChunkByInvoiceIds(Collection<String> invoiceIds, RequestContext requestContext) {
+    String query = convertIdsToCqlQuery(invoiceIds);
+    return invoiceService.getInvoices(query, 0, Integer.MAX_VALUE, requestContext);
   }
 }
